[package]
name = "shared"
description = "Shared code for ParadeDB crates"
version = "0.9.1"
edition = "2021"
license = "AGPL-3.0"

[features]
fixtures = ["async-std", "rstest", "soa_derive", "sqlx", "bigdecimal"]

[dependencies]
envy = "0.4.2"
pgrx = "0.12.0"
reqwest = { version = "0.11.22", features = ["blocking"] }
serde = "1.0.189"
serde_json = "1.0.107"
time = { version = "0.3.34", features = ["serde"] }
tracing = "0.1.40"
uuid = "1.5.0"
async-std = { version = "1.12.0", features = ["attributes"], optional = true }
rstest = { version = "0.18.2", optional = true }
soa_derive = { version = "0.13.0", optional = true }
sqlx = { version = "0.7.3", features = [
  "postgres",
  "runtime-async-std",
  "time",
  "bigdecimal",
  "uuid",
  "chrono",
], optional = true }
bigdecimal = { version = "0.3.0", features = ["serde"], optional = true }
bytes = "1.5.0"
thiserror = "1.0.57"
once_cell = "1.19.0"
url = "2.5.0"
walkdir = "2.5.0"
os_info = { version = "3", default-features = false }
chrono = { version = "0.4.34", features = ["clock", "alloc"] }
humansize = "2.1.3"
anyhow = "1.0.83"
datafusion = "38.0.0"
tempfile = "3.10.1"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
libc = "0.2.155"

[dev-dependencies]
mockall = "0.12.1"
pgrx = "0.12.0"

[package.metadata.cargo-machete]
ignored = ["rstest"]
pgrx-tests = "0.12.0"
