[package]
name = "stressgres"
description = "A Postgres Stress Test Tool, as a TUI"
version = "0.3.9"
edition = "2021"
license = "AGPL-3.0"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5", features = ["derive"] }
csv = "1.4.0"
cursive = {  version = "0.21.1"}
cursive-multiplex = "0.7.0"
cursive_core = "0.4.6"
cursive_table_view = "0.15.0"
human_bytes = "0.4.3"
humantime = "2.3.0"
image = "0.25.9"
libc = "0.2.178"
parking_lot = "0.12.5"
pgrx-pg-config = "0.13.1"
plotters = "0.3.7"
postgres = "0.19.12"
rust_decimal = { version = "1.39.0", features = ["db-postgres"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.145", features = ["preserve_order", "arbitrary_precision"] }
shutdown_hooks = "0.1.0"
sysinfo = "0.33.1"
toml = "0.8.23"
url = "2.5.7"
postgres-openssl = "0.5.2"
openssl = "0.10.75"

[workspace]
