[package]
name = "stressgres"
description = "A Postgres Stress Test Tool, as a TUI"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6", features = ["derive"] }
csv = "1.4.0"
cursive = { version = "0.21.1" }
cursive-multiplex = "0.7.0"
cursive_core = "0.4.6"
cursive_table_view = "0.15.0"
human_bytes = "0.4.3"
humantime = "2.3.0"
image = "0.25.9"
libc = "0.2.186"
parking_lot = "0.12.5"
pgrx-pg-config = "0.13.1"
plotters = "0.3.7"
postgres = "0.19.13"
rust_decimal = { version = "1.41.0", features = ["db-postgres"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.149", features = [
  "preserve_order",
  "arbitrary_precision",
] }
shutdown_hooks = "0.1.0"
sysinfo = "0.33.1"
toml = "0.8.23"
url = "2.5.8"
postgres-openssl = "0.5.3"
openssl = "0.10.78"
