[package]
name = "tests"
description = "test suite for pg_search"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[lib]
crate-type = ["rlib"]

[features]
icu = ["tokenizers/icu"]

[dependencies]

[dev-dependencies]
approx = "0.5.1"
anyhow = "1.0.96"
async-std = { version = "1.13.0", features = ["attributes"] }
bigdecimal = { version = "0.4.7", features = ["serde"] }
bytes = "1.10.0"
chrono = { version = "0.4.39", features = ["clock", "alloc"] }
cmd_lib = "1.9.5"
dotenvy = "0.15.7"
futures = "0.3.31"
pgvector = { version = "0.4.0", features = ["sqlx"] }
portpicker = "0.1.1"
pretty_assertions = "1.4.1"
rand = "0.9.0"
rstest = "0.24.0"
serde = "1.0.218"
serde_json = "1.0.139"
soa_derive = "0.13.0"
sqlx = { version = "0.8.3", features = [
  "postgres",
  "runtime-async-std",
  "time",
  "bigdecimal",
  "uuid",
  "chrono",
] }
strum = "0.27.1"
strum_macros = "0.27.1"
tantivy.workspace = true
tempfile = "3.17.1"
time = { version = "0.3.37", features = ["serde"] }
tokenizers = { path = "../tokenizers" }
tokio = { version = "1.43.0", features = ["rt-multi-thread", "macros"] }
uuid = "1.14.0"
num-traits = "0.2.19"
