[package]
name = "tests"
description = "test suite for pg_search"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[lib]
crate-type = ["rlib"]

[features]
icu = ["tokenizers/icu"]

[dependencies]

[dev-dependencies]
approx = "0.5.1"
anyhow = "1.0.98"
async-std = { version = "1.13.1", features = ["attributes"] }
bigdecimal = { version = "0.4.8", features = ["serde"] }
bytes = "1.10.1"
chrono = { version = "0.4.41", features = ["clock", "alloc"] }
cmd_lib = "1.9.5"
dotenvy = "0.15.7"
futures = "0.3.31"
lockfree-object-pool = "0.1.6"
parking_lot = "0.12.3"
pgvector = { version = "0.4.0", features = ["sqlx"] }
portpicker = "0.1.1"
pretty_assertions = "1.4.1"
rand = "0.9.1"
rayon = "1.10.0"
rstest = "0.25.0"
rustc-hash = "2.1.1"
serde = "1.0.219"
serde_json = "1.0.140"
soa_derive = "0.14.0"
sqlx = { version = "0.8.5", features = [
  "postgres",
  "runtime-async-std",
  "time",
  "bigdecimal",
  "uuid",
  "chrono",
] }
strum = "0.27.1"
strum_macros = "0.27.1"
tantivy.workspace = true
tempfile = "3.19.1"
time = { version = "0.3.41", features = ["serde"] }
tokenizers = { path = "../tokenizers" }
tokio = { version = "1.44.2", features = ["rt-multi-thread", "macros"] }
uuid = "1.16.0"
num-traits = "0.2.19"
proptest = "1.6.0"
proptest-derive = "0.5.1"
