[package]
name = "tests"
description = "test suite for pg_search"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[lib]
crate-type = ["rlib"]


[dependencies]

[dev-dependencies]
approx = "0.5.1"
anyhow = "1.0.100"
async-std = { version = "1.13.2", features = ["attributes"] }
benchmarks = { path = "../benchmarks" }
bigdecimal = { version = "0.4.9", features = ["serde"] }
bytes = "1.11.0"
chrono = { version = "0.4.42", features = ["clock", "alloc"] }
cmd_lib = "1.9.6"
dotenvy = "0.15.7"
futures = "0.3.31"
lockfree-object-pool = "0.1.6"
pgvector = { version = "0.4.1", features = ["sqlx"] }
pretty_assertions = "1.4.1"
rand = "0.9.2"
rstest = "0.25.0"
rustc-hash = "2.1.1"
serde = "1.0.228"
serde_json = "1.0.145"
soa_derive = "0.14.0"
sqlx = { version = "0.8.6", features = [
  "postgres",
  "runtime-async-std",
  "time",
  "bigdecimal",
  "uuid",
  "chrono",
] }
strum = "0.27.2"
strum_macros = "0.27.2"
tantivy.workspace = true
tempfile = "3.23.0"
time = { version = "0.3.44", features = ["serde"] }
tokenizers = { path = "../tokenizers" }
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros"] }
uuid = "1.19.0"
num-traits = "0.2.19"
proptest = "1.9.0"
proptest-derive = "0.6.0"
env_logger = "0.11.8"
