[tool.poetry]
name = "retakesearch"
version = "0.0.0"
description = "Open Source Neural Search Engine Python Client"
authors = ["Ming Ying <ming.ying.nyc@gmail.com>"]
readme = "README.md"
packages = [{include = "retakesearch"}]

[tool.poetry.dependencies]
python = ">=3.6,<4"
certifi = "^2023.7.22"
retakesearch-py = "^2.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
