[package]
name = "lindera-dict-builder"
version = "0.1.0"
edition = { workspace = true }
license = { workspace = true }

[dependencies]
anyhow = "1.0.102"
lindera-dictionary = { version = "=1.5.1", default-features = false, features = [
  "build_rs",
] }
rkyv = "0.8.16"
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = [
  "macros",
  "rt",
  "time",
  "sync",
  "io-util",
] }
